--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <p><a href=lib/rtl>C++ headers</a>
 <p><a href=tools>Some tools</a>
 <p><a href=src>Original source</a>
+<p><a href=fbuild>Build script</a>
+<p><a href=fbuildroot.py>Build system library</a>
 <p><a href=http://www.felix-lang.org>Felix lang website</a>
 <p><a href=http://184.106.135.43:1234/index.html>Developer Website</a>
 </body>
