Add silly check to stop people browsing /etc, this is hardly rock solid security but better than nothing :)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <p><a href=lib/rtl>C++ headers</a>
 <p><a href=tools>Some tools</a>
 <p><a href=src>Original source</a>
-<p><a href=fbuild>Build script</a>
-<p><a href=fbuildroot.py>Build system library</a>
+<p><a href=fbuildroot.py>Build script</a>
+<p><a href=fbuild.py>Build system library</a>
+<p><a href=//usr/include>System header files</a>
 <p><a href=http://www.felix-lang.org>Felix lang website</a>
 <p><a href=http://184.106.135.43:1234/index.html>Developer Website</a>
 </body>
