Colourise C embedded in felix, and hyperlink it too.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p><a href=src>Original source</a>
 <p><a href=fbuildroot.py>Build script</a>
 <p><a href=fbuild.py>Build system library</a>
-<p><a href=//usr/include>System header files</a>
+<p><a href=/$/usr/include>System header files</a>
 <p><a href=http://www.felix-lang.org>Felix lang website</a>
 <p><a href=http://184.106.135.43:1234/index.html>Developer Website</a>
 </body>
