Make the home page prettier. Fix a bug serving images. Add an image. Change the configuration data in the library to be a module, and change the flx command line tool to suit this.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
     <title>Felix installation</title>
 </head>
 <body>
-<p>Welcome to your Felix installation. 
-<p><a href=doc>Documentation</a>
-<p><a href=config>Your configuration</a>
-<p><a href=lib>Felix library</a>
-<p><a href=lib/rtl>C++ headers</a>
-<p><a href=tools>Some tools</a>
-<p><a href=src>Original source</a>
-<p><a href=fbuildroot.py>Build script</a>
-<p><a href=fbuild.py>Build system library</a>
-<p><a href=/$/usr/include>System header files</a>
-<p><a href=http://www.felix-lang.org>Felix lang website</a>
-<p><a href=http://184.106.135.43:1234/index.html>Developer Website</a>
+<h1>Welcome to your Felix installation.
+<table>
+<tr><td width=50 rowspan=40>
+<tr><td><td rowspan=40><img src=web/images/FelixWork.jpg></img>
+<tr><td><td><a href=doc>Documentation</a>
+<tr><td><td><a href=config>Your configuration</a>
+<tr><td><td><a href=lib>Felix library</a>
+<tr><td><td><a href=lib/rtl>C++ headers</a>
+<tr><td><td><a href=tools>Some tools</a>
+<tr><td><td><a href=src>Original source</a>
+<tr><td><td><a href=fbuildroot.py>Build script</a>
+<tr><td><td><a href=fbuild.py>Build system library</a>
+<tr><td><td><a href=/$/usr/include>System header files</a>
+<tr><td><td><a href=http://www.felix-lang.org>Felix lang website</a>
+<tr><td><td><a href=http://184.106.135.43:1234/index.html>Developer Website</a>
+</table>
 </body>
 </html>
-
