--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <tr><td width=50 rowspan=40>
 <tr><td><td rowspan=40><img src=web/images/FelixWork.jpg></img>
 <tr><td><td><a href=doc>Documentation</a>
+<tr><td><td><a href=doc/iscr/en_flx_top_tutorial.html>Main Tutorial (old)</a>
+<tr><td><td><a href=doc/iscr/en_flx_top_macro.html>Macros Tutorial (old)</a>
+<tr><td><td><a href=doc/iscr/en_flx_top_bind.html>C/C++ Binding Tutorial (old)</a>
+<tr><td><td><a href=doc/iscr/en_flx_top_migrate.html>Migrating from C++ Tutorial (old)</a>
 <tr><td><td><a href=config>Your configuration</a>
 <tr><td><td><a href=lib>Felix library</a>
 <tr><td><td><a href=lib/rtl>C++ headers</a>
