--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Felix website: under construction</h1>
-<img src=web/images/FelixWork.jpg></img>
+<img src=web/images/FelixWork.jpg>
 <a href=http://felix-lang.org:1116/>Felix 1.1.6rc1 Live</a>
 </body>
 </html>
