Remove optimisation flags. Make dist out of the head.
Optimisation flags are gone. Instead, we either debug or we
optimise. There's no unoptimised Felix.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <tr><td><td><a href=lib>Felix library</a>
 <tr><td><td><a href=lib/rtl>C++ headers</a>
 <tr><td><td><a href=tools>Some tools</a>
+<tr><td><td><a href=test>Regression test suite</a>
+<tr><td><td><a href=tut>Tutorial examples</a>
 <tr><td><td><a href=src>Original source</a>
-<tr><td><td><a href=fbuildroot.py>Build script</a>
-<tr><td><td><a href=fbuild.py>Build system library</a>
-<tr><td><td><a href=/$/usr/include>System header files</a>
-<tr><td><td><a href=http://www.felix-lang.org>Felix lang website</a>
-<tr><td><td><a href=http://184.106.135.43:1234/index.html>Developer Website</a>
+<tr><td><td><a href=fbuildroot.py>Felix Build script</a>
+<tr><td><td><a href=buildsystem>Felix Build system library</a>
+<tr><td><td><a href=fbuild>fbuild Build system</a>
+<tr><td><td><a href=/$/usr/include>System C header files</a>
+<tr><td><td><a href=http://www.felix-lang.org>Felix website online</a>
 </table>
 </body>
 </html>
