--- a/web/index.html
+++ b/web/index.html
@@ -7,5 +7,6 @@
 <h1 style="text-align:center">Felix website: under construction</h1>
 <p style="align:center;margin-left:auto;margin-right:auto;width:50%"><img src=/images/FelixWork.jpg>
 <p style="margin-left:50px"><a href=http://felix-lang.org:1116/>Felix 1.1.6rc1 Live</a>
+<p style="margin-left:50px"><a href=http://felix-lang.org:1116/dist>Download Source</a>
 </body>
 </html>
