--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,8 @@
 <table><tr><td rowspan=20>
 <table>
   <tr><td> <img style="align:top;" src=images/200px-Felix_the_cat.svg.png> <td></tr>
-  <tr><td><a href=http://felix-lang.org:1116/>Felix 1.1.6rc3 Live</a></td></tr>
-  <tr><td><a href=http://felix-lang.org:1116/dist>Download Source</a></td></tr>
+  <tr><td><a href=http://felix-lang.org:1116/>Felix Live</a></td></tr>
+  <tr><td><a href=download.html>Download Instructions</a></td></tr>
 </table>
 </td><td>
   </td></tr><tr><td></td><td>
