Fix download instructions.

--- a/web/download.html
+++ b/web/download.html
@@ -22,7 +22,7 @@ is likely to fail.
 Then issue these
 commands:
 <pre>
-git clone git@github.com/felix-lang felix
+git clone git@github.com:felix-lang/felix.git
 cd felix
 git submodule init
 git submodule update
