--- a/web/index.html
+++ b/web/index.html
@@ -9,19 +9,19 @@
   <tr><td> <img style="align:top;" src=images/200px-Felix_the_cat.svg.png> <td></tr>
   <tr><td><a href=http://felix-lang.org:1116/>Felix Live</a></td></tr>
   <tr><td><a href=download.html>Download Instructions</a></td></tr>
+  <tr><td><a href=tut_01.html>Tutorial</a></td></tr>
 </table>
 </td><td>
   </td></tr><tr><td></td><td>
   Felix is a new programming language in the ML family.
   </td></tr><tr><td></td><td>
-  <strong>Easy to Deploy:</strong> Felix is designed as a <em>scripting language</em> so it is as <em>easy to use</em> as Ruby, Python or PHP,
+  <strong>Easy to Deploy:</strong> Felix is designed as a <em>scripting language</em> so it is 
+  as <em>easy to use</em> as Ruby, Python or PHP,
   and provides the same kind of <em>platform independence</em> and <em>rapid prototyping</em>. 
-  <a href="./Easy_to_Deploy.fdoc">Look</a>
   </td></tr><tr><td></td><td><p>
   <strong>Easy to read and write:</strong> Felix code is syntactically clean and provides
   many shortcuts for common requirements. The strongest feature here is what is left out:
   there are no classes and so you can't get bogged down in object oriented method spaghetti.
-  <a href="./Easy_to_Read_and_Write.fdoc">Look</a>
 
   </td></tr><tr><td></td><td><p>
 
@@ -34,20 +34,19 @@
   <strong>Reuse C and C++ libraries:</strong> Felix provides a simple way to bind almost seamlessly to C and C++ code,
   so you can continue to use all your favourite libraries: compatibility is assured
   because Felix uses the C/C++ object model.
-  <a href="./Reuse_C_and_Cxx_Libraries.fdoc">Look</a>
   </td></tr><tr><td></td><td><p>
   <strong>Program correctness</strong> is supported by a wide range of features including <em>garbage
   collection</em> for automatic storage management, strict high power <em>static typing</em> including
-  <em>overloading</em>, <em>parametric polymorphism</em>, Haskell style <em>type classes</em>, and <em>type constraints</em>. 
+  <em>overloading</em>, <em>parametric polymorphism</em>, Haskell style <em>type classes</em>, 
+  and <em>type constraints</em>. 
   </td></tr>
 </table>
   
   <p><strong>Contract programming:</strong>
   Felix provides the best contract programming system of any production language.
   It has the usual assertions, pre-conditions, and post-conditions for
-  functions, but also provides reductions, axioms, lemmas and theorems with an interface
-  to the Why automatic theorem proving machinery. Abstract typing is supported by modules,
-  and contol over visibility.
+  functions, but also provides reductions, axioms, lemmas and theorems.
+  Abstract typing is supported by modules, and contol over visibility.
   </p>
   <p><strong>Type system:</strong>
   The type system is formally an enhanced version of the typed lambda calculus plus
@@ -56,11 +55,12 @@
   functions with closures are provided. Felix also provides a range of type constructors
   including tuples, records, and stucts, cases and variants.
   </p><p>
-  <strong>Network programming</strong> is enhanced by a built-in asynchronous network I/O system coupled
-  with both <em>pre-emptive threads</em> and <em>cooperative threads</em>. 
-  Cooperative threads, or <em>fibres</em>
-  are light enough for mega-threading (millions of threads on a laptop).
-  Both kinds of thread synchronise using <em>channels</em>.
+  <strong>Fibres</strong>Felix provides fibres, also known as cooperative
+  multi-tasking. Fibres are threads which exchange control by transmission
+  of data on channels. </p>
+  <strong>Network programming</strong> is enhanced by a built-in asynchronous 
+  network I/O system coupled with both <em>pre-emptive threads</em>
+  and uses channels for synchronisation.
   </p><p>
   <strong>User defined syntax:</strong>
   Felix is designed to support <em>domain specific sublanguage</em> development.
@@ -68,7 +68,8 @@
   relatively easy to program. Felix uses an EBNF variant for the grammar with
   parser actions coded in Scheme. The underlying parser is Dypgen, an extensible
   GLR parser.
-<p style="margin-left:40px">Sourceforge mailing list: felix-language@lists.sourceforge.net
-<p style="margin-left:40px">Google mailing list: felix-language@googlegroups.com
+  <p style="margin-left:40px">Google mailing list: felix-language@googlegroups.com</p>
+  <p style="margin-left:40px">Sourceforge mailing list: felix-language@lists.sourceforge.net
+  <p style="margin-left:40px">website: <a href="http://felix-lang.org">felix-lang.org</a>
 </body>
 </html>
