Add utime() function to posix filesystem and add preformat command to webserver.

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <tr><td> <img style="align:top;" src=images/200px-Felix_the_cat.svg.png> <td></tr>
   <tr><td><a href=http://felix-lang.org:1116/>Felix Live</a></td></tr>
   <tr><td><a href=download.html>Download Instructions</a></td></tr>
-  <tr><td><a href=tut_01.html>Tutorial</a></td></tr>
+  <tr><td><a href=tut_01.fdoc>Tutorial</a></td></tr>
 </table>
 </td><td>
   </td></tr><tr><td></td><td>
