Move tools into src directory.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <table><tr><td rowspan=20>
 <table>
   <tr><td> <img style="align:top;" src=web/images/200px-Felix_the_cat.svg.png> <td></tr>
+  <tr><td><a href="web/version.fdoc">Felix Version</a></td></tr>
   <tr><td><a href="index2.html">Felix Live</a></td></tr>
   <tr><td><a href=web/download.html>Download Instructions</a></td></tr>
   <tr><td><a href=web/tut_01.fdoc>Tutorial</a></td></tr>
