--- a/web/download.html
+++ b/web/download.html
@@ -97,11 +97,7 @@ The main page is currently at
 <pre>
 http://felix-lang.org
 </pre>
-There is also an image of a live installation at:
-<pre>
-http://felix-lang.org:1116
-</pre>
-If you follow the installation procedure the latter should be
+If you follow the installation procedure this should be
 echoed on your local machine.
 </body>
 </html>
