Fix arrays up. Add literals for size, intptr, ptrdiff, intmax.

--- a/src/index.html
+++ b/src/index.html
@@ -72,5 +72,7 @@
   <p style="margin-left:40px">Google mailing list: felix-language@googlegroups.com</p>
   <p style="margin-left:40px">Sourceforge mailing list: felix-language@lists.sourceforge.net
   <p style="margin-left:40px">website: <a href="http://felix-lang.org">felix-lang.org</a>
+  <p style="margin-left:40px">Home Page Translation: <a href="http://webhostinggeeks.com/science/felix-lang-ro">Romanian</a>
+
 </body>
 </html>
