--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <tr><td><a href="web/version.fdoc">Felix Version</a></td></tr>
   <tr><td><a href="index2.html">Felix Live</a></td></tr>
   <tr><td><a href=web/download.html>Download Instructions</a></td></tr>
-  <tr><td><a href=web/tut_01.fdoc>Tutorial</a></td></tr>
+  <tr><td><a href=web/tut_index.fdoc>Tutorial</a></td></tr>
 </table>
 </td><td>
   </td></tr><tr><td></td><td>
