Change image linke to use absolute paths

--- a/src/lib/web/examples/db_and_jquery/html/index.html
+++ b/src/lib/web/examples/db_and_jquery/html/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="/css/smoothness/jquery-ui-1.8.16.custom.css"/>
-<script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.6.2.min.js"></script>
 <style type="text/css">
   body{ font: 62.5% "Trebuchet MS", sans-serif; margin: 50px;}
   ul{
@@ -21,7 +21,7 @@
 </head>
 <body>
 <h1>WebServer Demo Page</h1>
-<a href=""><img src="images/FelixWork.jpg"/></a>
+<a href=""><img src="/images/FelixWork.jpg"/></a>
 <br/>
 
 <ul class="horizontal_list">
