--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <tr><td><a href="index2.html">Felix Live</a></td></tr>
   <tr><td><a href=web/download.html>Download Instructions</a></td></tr>
   <tr><td><a href=web/tut_index.fdoc>Tutorial</a></td></tr>
+  <tr><td><a href=web/community.html>Community</a></td></tr>
 </table>
 </td><td>
   </td></tr><tr><td></td><td>
@@ -69,10 +70,6 @@
   relatively easy to program. Felix uses an EBNF variant for the grammar with
   parser actions coded in Scheme. The underlying parser is Dypgen, an extensible
   GLR parser.
-  <p style="margin-left:40px">Google mailing list: felix-language@googlegroups.com</p>
-  <p style="margin-left:40px">Sourceforge mailing list: felix-language@lists.sourceforge.net
-  <p style="margin-left:40px">website: <a href="http://felix-lang.org">felix-lang.org</a>
-  <p style="margin-left:40px">Home Page Translation: <a href="http://webhostinggeeks.com/science/felix-lang-ro">Romanian</a>
 
 </body>
 </html>
