--- a/src/web/download.html
+++ b/src/web/download.html
@@ -12,7 +12,7 @@ To download on a Unix box, ensure the following are installed:
 git
 python 3.1 or better
 ocaml 3.12 or better
-g++ 4.1 or better
+g++ 4.1 or better OR clang 3.0 
 </pre>
 Felix builds on Linux and OSX. It is supposed to build on Windows
 using MSVC++ as well however we cannot support Windows at this time and the build
@@ -33,7 +33,6 @@ make test
 <p>Now to install Felix:
 <pre>
 make install           # sudo password required
-make install-bin       # sudo password required
 mk_daemon /usr/local/bin/webserver --port=1116
 # point your browser at http://localhost:1116
 </pre>
@@ -48,6 +47,7 @@ The binaries in <pre>/usr/local/bin</pre> are copies of those
 in the last install directory.
 </p>
 <h2>Options</h2>
+Please see the Makefile for more complete options.
 You can also build a debug version of Felix:
 <pre>
 make build-debug
@@ -69,7 +69,6 @@ To update felix do this:
 cd felix
 git pull
 git submodule update
-rm automaton.syntax   # temporarily required!
 make build
 make test
 make doc
