Begin restructuring of documentation.

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <tr><td><a href="web/version.fdoc">Felix Version</a></td></tr>
   <tr><td><a href="index2.html">Felix Live</a></td></tr>
   <tr><td><a href=web/download.html>Download Instructions</a></td></tr>
+  <tr><td><a href=web/document_index.fdoc>Documentation</a></td></tr>
   <tr><td><a href=web/tut_index.fdoc>Tutorial</a></td></tr>
   <tr><td><a href=web/advocacy_index.fdoc>Advocacy</a></td></tr>
   <tr><td><a href=web/community.html>Community</a></td></tr>
