A bit more work on the tutorial.

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,14 @@
 </head>
 <body>
 <h1 style="text-align:center">The Felix Programming Language</h1>
-<table><tr><td rowspan=20>
-<table>
-  <tr><td> <img style="align:top;" src=web/images/200px-Felix_the_cat.svg.png> <td></tr>
-  <tr><td><a href="web/version.fdoc">Felix Version</a></td></tr>
-  <tr><td><a href="index2.html">Felix Live</a></td></tr>
-  <tr><td><a href=web/download.html>Download Instructions</a></td></tr>
-  <tr><td><a href=web/document_index.fdoc>Documentation</a></td></tr>
-  <tr><td><a href=web/tut_index.fdoc>Tutorial</a></td></tr>
-  <tr><td><a href=web/advocacy_index.fdoc>Advocacy</a></td></tr>
-  <tr><td><a href=web/community.html>Community</a></td></tr>
-</table>
-</td><td>
-  </td></tr><tr><td></td><td>
-  Felix is a new programming language in the ML family.
-  </td></tr><tr><td></td><td>
+<p style="text-align:center">The fastest scripting language on Earth.</p>
+<p style="text-align:center"><img style="align:center;" src=web/images/200px-Felix_the_cat.svg.png></p>
+<p style="text-align:center">
+  <a href=web/download.html>Download</a> |
+  <a href=web/document_index.fdoc>Docs</a> |
+  <a href=web/tut_index.fdoc>Tutorial</a> |
+  <a href=web/advocacy_index.fdoc>Advocacy</a> |
+  <a href=web/community.html>Community</a> 
+</p>
 </body>
 </html>
