Add FB to community.

--- a/src/web/community.html
+++ b/src/web/community.html
@@ -3,10 +3,16 @@
     <title>Felix: Community</title>
 </head>
 <body>
-<h1 style="text-align:center">Community</h1>
-  <p style="margin-left:40px">Google mailing list: felix-language@googlegroups.com</p>
-  <p style="margin-left:40px">Sourceforge mailing list: felix-language@lists.sourceforge.net
-  <p style="margin-left:40px">website: <a href="http://felix-lang.org">felix-lang.org</a>
-  <p style="margin-left:40px">Home Page Translation: <a href="http://webhostinggeeks.com/science/felix-lang-ro">Romanian</a>
+  <h1 style="text-align:center">Community</h1>
+  <ul>
+    <li>Website: <a href="http://felix-lang.org">felix-lang.org</a></li>
+    <li>Wiki: <a href="http://felix-lang.org:8080">felix-lang.org:8080/wiki</a></li>
+    <li>Primary mail: Google mailing list: felix-language@googlegroups.com</li>
+    <li>Secondary mail: Sourceforge mailing list: felix-language@lists.sourceforge.net</li>
+    <li>Chat and Discussion: Facebook Group <a href="http://www.facebook.com/groups/243958412369802/">Felix Programming Language</a></li>
+    <li>Development host: felix-lang.org</li>
+    <li>Git Organisation Host: <a href="https://github.com/felix-lang/">github.com/felix-lang</a></li>
+    <li>Home Page Translation: <a href="http://webhostinggeeks.com/science/felix-lang-ro">Romanian</a></li>
+  </ul>
 </body>
 </html>
