Add wiki to home page. Add 2px space under fdoc paragraphs.

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,8 @@
 <p style="text-align:center"><img style="align:center;" src=web/images/200px-Felix_the_cat.svg.png></p>
 <p style="text-align:center">
   <a href=web/download.html>Download</a> |
-  <a href=web/document_index.fdoc>Docs</a> |
+  <a href="http://felix-lang.org:8080/wiki/wiki">Wiki</a> |
   <a href=web/tut_index.fdoc>Tutorial</a> |
-  <a href=web/advocacy_index.fdoc>Advocacy</a> |
   <a href=web/community.html>Community</a> 
 </p>
 <hr />
