--- a/src/wiki/html/page-template.html
+++ b/src/wiki/html/page-template.html
@@ -10,6 +10,11 @@
 <link href="/css/felix.css" rel="stylesheet"/>
 <link href="/css/fdoc.css" rel="stylesheet"/>  
   <!--___CUSTOM_HEADER___--> 
+<style>
+p button {
+  display:none; // Inhibit Expand Colapse buttons
+}
+</style>
 </head>
 <body id='body'>
   <div id="header"><span id='nav-crumbs'>
