--- a/src/wiki/html/paths-table.html
+++ b/src/wiki/html/paths-table.html
@@ -1,6 +1,6 @@
 <table id='paths' class='admin' border='1' cellpadding='10'>
-<caption>Paths</caption>
-<tr><th></th><th>Group</th><th>path</th><th>Rights</th></tr>
+<caption>Access Paths</caption>
+<tr><th></th><th>Group</th><th>path</th>  </tr>
 ___PATHS___
 </table>
 
