--- a/src/wiki/html/path-form.html
+++ b/src/wiki/html/path-form.html
@@ -1,6 +1,6 @@
 <table id='paths' class='admin' border='1' cellpadding='10'>
 <caption>Paths</caption>
-<tr><th></th><th>Group</th><th>path</th><th>Rights</th></tr>
+<tr><th></th><th>Group</th><th>Path</th></tr>
 ___PATHS___
 </table>
 <br/>
@@ -15,7 +15,7 @@ ___PATHS___
 <tr><td colspan='2'>___GROUP_SELECT___</td></tr>
 <tr><td><label for='path'>Path:</label></td><td><input id='path' name='path' type='text'
 					  size='80' /></td></tr>
-<tr><td colspan='2'>___LVL_SELECT___</td></tr>
+<!--<tr><td colspan='2'>___LVL_SELECT___</td></tr>-->
 <tr><td><span class="ui-widget-header
 					       ui-corner-all" style='margin-top:10px;'
 			  ><button id="path_add_edit" style='padding:
