Remove pre tag around plugin formatted text.
If the text needs to be preformatted, the plugin
should do it.

--- a/src/wiki/html/page-template.html
+++ b/src/wiki/html/page-template.html
@@ -17,13 +17,13 @@ p button {
 </style>
 </head>
 <body id='body'>
-  <div id="header"><span id='nav-crumbs'>
-
-</span>
+  <div id="header">
+    <span id='nav-crumbs'> </span>
       <span id='header-title'> &nbsp;Felix Wiki:___FNAME___ &nbsp; 
       <span id='title-content'></span>
-</span> 
-    <span id='nav-ctrls'>___CTRLS___</span></div>
+    </span> 
+    <span id='nav-ctrls'>___CTRLS___</span>
+  </div>
   <div id="container">
     <div id="center" class="column">
       <div id='center-col-content'>___CENTER_CONTENT___ </div>
@@ -45,7 +45,5 @@ p button {
   <div id="footer-wrapper">
     <div id="footer"> &nbsp; </div>
   </div>
-
 </body>
-
 </html>
