--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <p style="text-align:center">
   <a href=web/download.html>Download</a> |
   <a href="http://felix-lang.org:8080/wiki/wiki">Wiki</a> |
-  <a href=web/tut_index.fdoc>Tutorial</a> |
+  <a href=web/tutorial.fdoc>Tutorial</a> |
   <a href=web/community.html>Community</a> 
 </p>
 <hr />
