Win32 build instructions.

--- a/src/web/download.html
+++ b/src/web/download.html
@@ -14,9 +14,8 @@ python 3.1 or better
 ocaml 3.12 or better
 g++ 4.1 or better OR clang 3.0 
 </pre>
-Felix builds on Linux and OSX. It is supposed to build on Windows
-using MSVC++ as well however we cannot support Windows at this time and the build
-is likely to fail. 
+Felix builds on Linux and OSX. It builds on Windows using MSVC++ as
+well. For Windows specific build instructions see <a href="./win.fdoc">here</a>.
 
 <h2>Initial download</h2>
 Then issue these
