--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <p style="text-align:center"><img style="align:center;" src=web/images/200px-Felix_the_cat.svg.png></p>
 <p style="text-align:center">
   <a href=web/download.html>Download</a> |
-  <a href="http://felix-lang.org:8080/wiki/wiki">Wiki</a> |
+  <a href="web/tut_slides.fdoc">Overview: Slideshow</a> |
   <a href=web/tutorial.fdoc>Tutorial</a> |
   <a href=web/community.html>Community</a> 
 </p>
