--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <a href=web/download.html>Download</a> |
   <a href="web/tut_slides.fdoc">Overview: Slideshow</a> |
   <a href=web/tutorial.fdoc>Tutorial</a> |
+  <a href=web/reference.fdoc>Reference</a> |
   <a href=web/community.html>Community</a> 
 </p>
 <hr />
