Fix download page git clone spec.
You need a github account and ssh to use git clone git@ so
document the https method of download as well.

--- a/src/web/download.html
+++ b/src/web/download.html
@@ -19,9 +19,16 @@ well. For Windows specific build instructions see <a href="./win.fdoc">here</a>.
 
 <h2>Initial download</h2>
 Then issue these
-commands:
+commands: For registered developers, using SSH:
 <pre>
 git clone git@github.com:felix-lang/felix.git
+</pre>
+For everyone else:
+<pre>
+git clone https://github.com/felix-lang/felix.git
+</pre>
+then
+<pre>
 cd felix
 make build
 make doc
