--- a/src/web/flx_gramdoc.html
+++ b/src/web/flx_gramdoc.html
@@ -1299,29 +1299,41 @@
            collector can call to finalise an object prior to freeing up
            the underlying memory.
            By default, if no finaliser is specifed, the C++ destructor is called.
-0105:    <a href="/$src/lib/grammar/requirements.flxh#0105">srequirement_atom:= srequirement</a>
+0109:    <a href="/$src/lib/grammar/requirements.flxh#0109">srequirement :=  "encoder" scode_spec</a>
+           The encoder requirement applies only to a C type binding.
+           It specifies the name of a C function which can be called
+           to serialise one element of the object.
+           
+           By default, if no encoder is specifed, memcpy is used.
+0116:    <a href="/$src/lib/grammar/requirements.flxh#0116">srequirement :=  "decoder" scode_spec</a>
+           The decoder requirement applies only to a C type binding.
+           It specifies the name of a C function which can be called
+           to deserialise one element of the object.
+           
+           By default, if no decoder is specifed, memcpy is used.
+0120:    <a href="/$src/lib/grammar/requirements.flxh#0120">srequirement_atom:= srequirement</a>
            Requirement expressions. Deprecated.
-0108:    <a href="/$src/lib/grammar/requirements.flxh#0108">srequirement_atom:= "(" srequirements ")"</a>
+0123:    <a href="/$src/lib/grammar/requirements.flxh#0123">srequirement_atom:= "(" srequirements ")"</a>
            Requirement expressions. Deprecated.
-0111:    <a href="/$src/lib/grammar/requirements.flxh#0111">srequirement_and:= srequirement_and "and" srequirement_atom</a>
+0126:    <a href="/$src/lib/grammar/requirements.flxh#0126">srequirement_and:= srequirement_and "and" srequirement_atom</a>
            Requirement expressions. Deprecated.
-0113:    <a href="/$src/lib/grammar/requirements.flxh#0113">srequirement_and:= srequirement_atom</a>
-0116:    <a href="/$src/lib/grammar/requirements.flxh#0116">srequirement_or:= srequirement_or "or" srequirement_and</a>
+0128:    <a href="/$src/lib/grammar/requirements.flxh#0128">srequirement_and:= srequirement_atom</a>
+0131:    <a href="/$src/lib/grammar/requirements.flxh#0131">srequirement_or:= srequirement_or "or" srequirement_and</a>
            Requirement expressions. Deprecated.
-0118:    <a href="/$src/lib/grammar/requirements.flxh#0118">srequirement_or:= srequirement_and</a>
-0123:    <a href="/$src/lib/grammar/requirements.flxh#0123">srequirements:= srequirements "," srequirement_or</a>
+0133:    <a href="/$src/lib/grammar/requirements.flxh#0133">srequirement_or:= srequirement_and</a>
+0138:    <a href="/$src/lib/grammar/requirements.flxh#0138">srequirements:= srequirements "," srequirement_or</a>
            Requirement expressions: a comma separated list
            of requirements specified each one of the requirements
            applies independently.
-0125:    <a href="/$src/lib/grammar/requirements.flxh#0125">srequirements:= srequirement_or</a>
-0134:    <a href="/$src/lib/grammar/requirements.flxh#0134">srequirement := "body" scode_spec</a>
+0140:    <a href="/$src/lib/grammar/requirements.flxh#0140">srequirements:= srequirement_or</a>
+0149:    <a href="/$src/lib/grammar/requirements.flxh#0149">srequirement := "body" scode_spec</a>
            The body requirement is a floating requirement that
            specifies that the given code
            string be inserted into the output "near the top"
            of the generated C++ body (cpp) file.
            It can be used to emit utiliy functions
            written in C.
-0144:    <a href="/$src/lib/grammar/requirements.flxh#0144">srequirement := "header" scode_spec</a>
+0159:    <a href="/$src/lib/grammar/requirements.flxh#0159">srequirement := "header" scode_spec</a>
            The header requirement is a floating requirement that
            specifies that the given code
            string be inserted into the output "near the top"
@@ -1329,36 +1341,36 @@
            It is typically used to emit a "#include" directive
            so that the requiring binding has relevant types
            and functions available.
-0152:    <a href="/$src/lib/grammar/requirements.flxh#0152">scode_spec := sstring</a>
+0167:    <a href="/$src/lib/grammar/requirements.flxh#0167">scode_spec := sstring</a>
            A Felix string used as a code specification
            is treated as a template with special coding
            internally which can be replaced.
            This feature supports the fact that Felix code
            insertions can be polymorphic.
-0156:    <a href="/$src/lib/grammar/requirements.flxh#0156">scode_spec := scstring</a>
+0171:    <a href="/$src/lib/grammar/requirements.flxh#0171">scode_spec := scstring</a>
            A c-string like c"xxxx" is emitted literally
            without any substitutions.
-0161:    <a href="/$src/lib/grammar/requirements.flxh#0161">scode_spec := "ident"</a>
+0176:    <a href="/$src/lib/grammar/requirements.flxh#0176">scode_spec := "ident"</a>
            This is a special code to make specific
            that a binding is an identity which can
            be optimised away.
-0166:    <a href="/$src/lib/grammar/requirements.flxh#0166">stmt := "requires" srequirements ";"</a>
+0181:    <a href="/$src/lib/grammar/requirements.flxh#0181">stmt := "requires" srequirements ";"</a>
            The anonymous requires statement specifies requirements which
            propagates to all C bindings
            in the same class, or any descendant (enclosed) class.
-0170:    <a href="/$src/lib/grammar/requirements.flxh#0170">stmt := sname "requires" srequirements ";"</a>
+0185:    <a href="/$src/lib/grammar/requirements.flxh#0185">stmt := sname "requires" srequirements ";"</a>
            The named requires statement simply names a requirement.
-0176:    <a href="/$src/lib/grammar/requirements.flxh#0176">stmt := "header" scode_spec srequires_clause ";"</a>
+0191:    <a href="/$src/lib/grammar/requirements.flxh#0191">stmt := "header" scode_spec srequires_clause ";"</a>
            The header statement specifies a header requirement which
            propagates to all C bindings
            in the same class, or any descendant (enclosed) class.
-0182:    <a href="/$src/lib/grammar/requirements.flxh#0182">stmt := "body" scode_spec srequires_clause ";"</a>
+0197:    <a href="/$src/lib/grammar/requirements.flxh#0197">stmt := "body" scode_spec srequires_clause ";"</a>
            The body statement specifies a header requirement which
            propagates to all C bindings
            in the same class, or any descendant (enclosed) class.
-0186:    <a href="/$src/lib/grammar/requirements.flxh#0186">stmt := "header" sdeclname "=" scode_spec srequires_clause ";"</a>
+0201:    <a href="/$src/lib/grammar/requirements.flxh#0201">stmt := "header" sdeclname "=" scode_spec srequires_clause ";"</a>
            Named header requirement.
-0192:    <a href="/$src/lib/grammar/requirements.flxh#0192">stmt := "body" sdeclname "=" scode_spec srequires_clause ";"</a>
+0207:    <a href="/$src/lib/grammar/requirements.flxh#0207">stmt := "body" sdeclname "=" scode_spec srequires_clause ";"</a>
            Named body requirement.
 <hr/><a href="/$src/lib/grammar/save.flxh">save.flxh</a>
 <hr/><a href="/$src/lib/grammar/statements.flxh">statements.flxh</a>
