Performance measurement and display.
Why is Felix getting a different answer for nbody?
And why is it 10 times faster than C?

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1 style="text-align:center">The Felix Programming Language</h1>
-<p style="text-align:center">The fastest scripting language on Earth.</p>
+<p style="text-align:center">The <a href="../speed/perf.fdoc">fastest</a> scripting language on Earth.</p>
 <p style="text-align:center"><img style="align:center;" src=web/images/200px-Felix_the_cat.svg.png></p>
 <p style="text-align:center">
   <a href=web/download.html>Download</a> |
